Updating my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm going to school to learn to be a Full-Stack Developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Los Angeles, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Computer, console and tabletop gaming</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Anything software or web developer related</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Tucson, AZ</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to have a job that keeps me busy and challenged, which in turn keeps me motivated.</p>
     </section>
 
     <footer id="footer">
